# mnn-SDD-FIQA

./: README.md
android/: settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/androidTest/java/com/demo/faceimagequality/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: faceImageQuality.cpp  faceImageQuality.h  mInterface.cpp  mInterface.h  native-lib.cpp
android/app/src/main/cpp/include/MNN/: VCS.h
android/app/src/main/cpp/include/MNN/tools/cpp/: revertMNNModel.hpp
android/app/src/main/java/com/demo/faceimagequality/: AssetManager.java  MainActivity.java  NativeLibrary.java  WelcomeActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/demo/faceimagequality/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
model/: sdd_fiqa.mnn
